[package]
name = "sensor-core"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }                          # Serialization
image = "0.24.7"                                                                # Image processing
imageproc = "0.23.0"                                                            # Extended image processing
rusttype = "0.9.3"                                                              # Font handling / rendering
log = "0.4.20"                                                                  # Logging
dirs = "5.0.1"                                                                  # Directory handling