[package]
name = "sensor-core"
authors = ["Rouven Himmelstein <rouven@himmelstein.info>"]
version = "0.0.0" # will be replaced by the github action build script
license = "GPL-3.0"
edition = "2021"
description = "Core library for the sensor-bridge/display project"
readme = "README.md"
homepage = "https://github.com/RouHim/sensor-core"
repository = "https://github.com/RouHim/sensor-core"
keywords = ["sensor", "display", "embedded", "rust"]
categories = ["rendering"]


[dependencies]
serde = { version = "1.0.199", features = ["derive"] }                          # Serialization
image = "0.24.9"                                                                # Image processing
imageproc = "0.23.0"                                                            # Extended image processing
rusttype = "0.9.3"                                                              # Font handling / rendering
log = "0.4.21"                                                                  # Logging
dirs = "5.0.1"                                                                  # Directory handling

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
font-loader = { git = "https://github.com/matprec/rust-font-loader" }

[[bench]]
name = "text_render_benchmark"
harness = false